# jormungandr

./: CMakeLists.txt  README.md
src/: generalizednilsoliton.h  injectivemaps.h  jormungandr.cpp  negativeindices.h  niceliegroupwithmetric.h  nondiagonalgeneralizednilsolitons.h  nondiagonalmatrix.h  partitioned.h  polynomialsolver.h  restrictionsandoptions.h  semidirectproduct.h  splitter.h  sqrt.h
